fix: add overflow visible to InlineSVG for filter effects
- Add overflow: visible to svg-wrapper and svg element
- Prevents clipping of drop-shadow filters outside viewBox
- Allows filter effects to render properly on PttLogo component

--- a/src/components/ui/InlineSVG/InlineSVG.module.scss
+++ b/src/components/ui/InlineSVG/InlineSVG.module.scss
@@ -4,6 +4,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: visible;
+
+  & > svg {
+    overflow: visible;
+  }
 
   &--constrain-height {
     width: 100%;
